*** RC1 release ***
- Fixed a problem regarding the new module system and deleting the tmp/ directory
  under Linux 2.2 (thanks to FunTeenChat for helping track this down)
- Updated /credits. Now includes everyone who has sent in donations, thanks
  to everyone!
- Fixed a bug in "unkickable users" (umode +q), they could still be kicked
  by non-netadmin ircops in some (many) cases, reported by Zell (#0001541).
- Removed reference to SVSTIME from help.conf (it's actually /tsctl svstime)
  (#0001540) reported by penna and DukePyrolator.
- Added HOOKTYPE_UMODE_CHANGE (sptr, oldflags, newflags) - this may 
  not be accurate as umode changes are done manually many places.
- Added HOOKTYPE_TOPIC (catches both remote and local TOPIC sets).
- Added a missing ; in the docs oper {} example, reported by Certus
- Fixed a bug with leaving out SJB64 in PROTOCTL resulting in strangeness
  (#0001545) reported by MagicalTux2
- Added [OLD?] flag in /module so you can easily spot old beta* modules.
- Modulized: samode, sajoin, sapart, kick, topic, invite, list
- Added HOOKTYPE_REHASH_COMPLETE to allow permanent modules to reload
  command overrides. (#0001553) reported by AngryWolf
- Modulized: time, svskill
- Modulized: sjoin, pass, userhost, ison, silence
- Modulized: knock, umode2, squit, protoctl
- Slightly changed how extcmodes handles access control
- Module coders: for extended channelmodes the EXCHK_ACCESS* the return
  value should now be one of EX_*:
  EX_DENY        : disallowed, except for oper override
  EX_ALLOW       : allowed
  EX_ALWAYS_DENY : disallowed, even in case of operoverride (eg for
                   operlevel modes like +A).
  Note that it's backward compatible since TRUE/EX_ALLOW=1 and FALSE/EX_DENY=0.
- Fixed a few bugs with oper override & extended chanmodes, for example
  chanmode +T could not be set by a globop w/can_override and non-+hoaq.
- Added some set::throttle::* checking if insane values were supplied.
  Reported by Troco (#0001555).